@@ -1,33 +1,31 @@
 package ai.journa.prcontrol.controller;
 
+import ai.journa.prcontrol.domain.Beat;
 import ai.journa.prcontrol.dto.BeatResponse;
-import ai.journa.prcontrol.repository.BeatRepository;
-import org.springframework.http.ResponseEntity;
+import ai.journa.prcontrol.service.BeatService;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/beats")
 public class BeatController {
-    private final BeatRepository beatRepository;
+  private final BeatService beatService;
 
-    public BeatController(BeatRepository beatRepository) {
-        this.beatRepository = beatRepository;
-    }
+  public BeatController(BeatService beatService) {
+    this.beatService = beatService;
+  }
 
-    @GetMapping
-    public ResponseEntity<List<BeatResponse>> list() {
-        List<BeatResponse> beats = beatRepository.findAll().stream().map(beat -> {
-            BeatResponse response = new BeatResponse();
-            response.setId(beat.getId());
-            response.setName(beat.getName());
-            response.setSlug(beat.getSlug());
-            return response;
-        }).collect(Collectors.toList());
-        return ResponseEntity.ok(beats);
-    }
+  @GetMapping
+  public List<BeatResponse> listBeats() {
+    return beatService.findAllActive().stream()
+        .map(this::toResponse)
+        .toList();
+  }
+
+  private BeatResponse toResponse(Beat beat) {
+    return new BeatResponse(beat.getId(), beat.getName(), beat.getSlug(), beat.isActive());
+  }
 }
